--- a/DT/app/src/main/AndroidManifest.xml
+++ b/DT/app/src/main/AndroidManifest.xml
@@ -19,10 +19,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DT">
+        <activity android:name=".SearchView"></activity>
         <activity
             android:name=".SearchResult"
             android:label="@string/title_activity_search_result"
-            android:theme="@style/Theme.DT.NoActionBar"></activity>
+            android:theme="@style/Theme.DT.NoActionBar" />
         <activity android:name=".DetailsActivity" />
         <activity android:name=".PlaybackActivity" />
         <activity android:name=".BrowseErrorActivity" />
