--- a/DT/app/build.gradle
+++ b/DT/app/build.gradle
@@ -32,7 +32,8 @@ android {
 }
 
 dependencies {
-
+    compile("com.squareup.okhttp:okhttp:2.5.0")
+    compile("com.google.code.gson:gson:2.8.5")
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
