--- a/DT/app/build.gradle
+++ b/DT/app/build.gradle
@@ -32,6 +32,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     compile("com.squareup.okhttp:okhttp:2.5.0")
     compile("com.google.code.gson:gson:2.8.5")
     implementation 'androidx.appcompat:appcompat:1.2.0'
