--- a/DT/app/src/main/AndroidManifest.xml
+++ b/DT/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.dt">
+    package="com.example.dt" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -18,8 +18,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.DT">
-        <activity android:name=".Eng_Vie"></activity>
+        android:theme="@style/Theme.DT" >
+        <activity android:name=".MultiLanguage" >
+        </activity>
+        <activity android:name=".Eng_Vie" />
         <activity android:name=".SearchView" />
         <activity
             android:name=".SearchResult"
@@ -28,7 +30,7 @@
         <activity android:name=".DetailsActivity" />
         <activity android:name=".PlaybackActivity" />
         <activity android:name=".BrowseErrorActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
