--- a/DT/app/src/main/AndroidManifest.xml
+++ b/DT/app/src/main/AndroidManifest.xml
@@ -19,9 +19,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DT" >
-        <activity android:name=".MultiLanguage" >
+        <activity android:name=".MultiLanguage"
+            android:parentActivityName=".MainActivity"
+            >
         </activity>
-        <activity android:name=".Eng_Vie">
+        <activity android:name=".Eng_Vie"
+            android:parentActivityName=".MainActivity"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
